--- a/guest-login.html
+++ b/guest-login.html
@@ -131,7 +131,7 @@
         </form>
       </div>
     </div>
-    <script src="scripts.js"></script>
+    <script src="js/scripts.js"></script>
     <script>
       function toggleForm(type) {
         var studentForm = document.getElementById("student-form");
