--- a/homepage.html
+++ b/homepage.html
@@ -3,17 +3,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Homepage</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" href="img/favicon.png" type="image/x-icon" />
     <link href="img/favicon.png" rel="icon" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
     />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js" integrity="sha512-k/KAe4Yff9EUdYI5/IAHlwUswqeipP+Cp5qnrsUjTPCgl51La2/JhyyjNciztD7mWNKLSXci48m7cctATKfLlQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js"
+      integrity="sha512-k/KAe4Yff9EUdYI5/IAHlwUswqeipP+Cp5qnrsUjTPCgl51La2/JhyyjNciztD7mWNKLSXci48m7cctATKfLlQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
     <!-- Boxicons CDN Link -->
     <link
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
@@ -21,7 +29,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body data-rsssl=1>
+  <body data-rsssl="1">
     <nav>
       <div class="navbar">
         <i class="bx bx-menu"></i>
@@ -41,7 +49,8 @@
             <i class="bx bx-x"></i>
           </div>
           <ul class="links">
-            <li><a href="#">Home</a></li>
+            <li><a href="homepage.html" class="close-nav">&larr;</a></li>
+            <li><a href="homepage.html">Home</a></li>
             <li>
               <a href="#">Artifact Categories</a>
               <i class="bx bxs-chevron-down js-arrow arrow"></i>
@@ -52,8 +61,8 @@
                 <li><a href="#">Weaponry/Armaments</a></li>
               </ul>
             </li>
-            <li><a href="#">Igorot Dances</a></li>
-            <li><a href="#">About</a></li>
+            <li><a href="igorot-dances.html">Igorot Dances</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="access.html">Switch User</a></li>
           </ul>
         </div>
@@ -68,41 +77,49 @@
     <main>
       <div id="reader"></div>
       <div id="result"></div>
-      <div id="mobileMessage" style="display: none; text-align: center; padding: 20px;">
+      <div
+        id="mobileMessage"
+        style="display: none; text-align: center; padding: 20px"
+      >
         <h2>Please Switch to a Mobile Device or Tablet to Use the Camera</h2>
-    </div>
+      </div>
+      <div class="qr_scan"></div>
     </main>
+
     <script>
       function isMobileDevice() {
-            return (typeof window.orientation !== "undefined") || (navigator.userAgent.indexOf('IEMobile') !== -1);
-        }
+        return (
+          typeof window.orientation !== "undefined" ||
+          navigator.userAgent.indexOf("IEMobile") !== -1
+        );
+      }
 
-        if (!isMobileDevice()) {
-            document.getElementById('reader').style.display = 'none';
-            document.getElementById('mobileMessage').style.display = 'block';
-        } else {
-            const scanner = new Html5QrcodeScanner('reader', {
-                qrbox: { width: 250, height: 250 },
-                fps: 20,
-                aspectRatio: 0.75,
-            });
-            scanner.render(success, error);
-        }
+      if (!isMobileDevice()) {
+        document.getElementById("reader").style.display = "none";
+        document.getElementById("mobileMessage").style.display = "block";
+      } else {
+        const scanner = new Html5QrcodeScanner("reader", {
+          qrbox: { width: 250, height: 250 },
+          fps: 20,
+          aspectRatio: 0.75,
+        });
+        scanner.render(success, error);
+      }
 
-        function success(result) {
-            document.getElementById('result').innerHTML = `
+      function success(result) {
+        document.getElementById("result").innerHTML = `
                 <h2>Success!</h2>
                 <p><a href="${result}">${result}</a></p>
             `;
-            scanner.clear();
-            document.getElementById('reader').remove();
-        }
+        scanner.clear();
+        document.getElementById("reader").remove();
+      }
 
-        function error(err) {
-            console.error(err);
-        }
-      </script>
+      function error(err) {
+        console.error(err);
+      }
+    </script>
 
-  <script src="js/scripts.js"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
