--- a/scanner.html
+++ b/scanner.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>QR Code Scanner with AR</title>
-	<script src="js/jsQR.js"></script>
+	<script src="res/jsQR.js"></script>
 	<style>
 		#video {
 			width: 100%;
