--- a/access.html
+++ b/access.html
@@ -12,7 +12,7 @@
     <link rel="icon" href="img/favicon.png" type="image/x-icon" />
     <link href="img/favicon.png" rel="icon" />
     <!-- Your custom stylesheet -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="res/styles.css" />
   </head>
   <body class="access-body">
     <div class="logo-container">
