--- a/admin-login.html
+++ b/admin-login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login to Kultoura</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="res/styles.css" />
     <!-- Include Font Awesome -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"
@@ -59,6 +59,6 @@
         </form>
       </div>
     </div>
-    <script src="js/scripts.js"></script>
+    <script src="res/scripts.js"></script>
   </body>
 </html>
