--- a/igorot-dances.html
+++ b/igorot-dances.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Homepage</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="res/styles.css" />
     <link rel="icon" href="img/favicon.png" type="image/x-icon" />
     <link href="img/favicon.png" rel="icon" />
     <link
@@ -138,6 +138,6 @@
       }
     </script>
 
-    <script src="js/scripts.js"></script>
+    <script src="res/scripts.js"></script>
   </body>
 </html>
