--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SLU Museum</title>
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="res/styles.css" />
   <link rel="icon" href="img/favicon.png" type="image/x-icon" />
 </head>
 <body class="welcome-body">
