--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </div>
 </header>
 <div class="welcome-container">
-  <a href="access.html" class="btn-red">Get Started</a>
+  <a href="guest-login.html" class="btn-red">Get Started</a>
 </div>
 </body>
 </html>
