--- a/guest-login.html
+++ b/guest-login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Access as Guest</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="res/styles.css" />
     <!-- Include Font Awesome -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"
@@ -131,7 +131,7 @@
         </form>
       </div>
     </div>
-    <script src="js/scripts.js"></script>
+    <script src="res/scripts.js"></script>
     <script>
       function toggleForm(type) {
         var studentForm = document.getElementById("student-form");
