--- a/homepage.html
+++ b/homepage.html
@@ -53,21 +53,11 @@
         <i class="bx bx-x"></i>
       </div>
       <ul class="links">
-        <li><a href="homepage.html" class="close-nav">&larr;</a></li>
-        <li><a href="homepage.html">Home</a></li>
-        <li>
-          <a href="#">Artifact Categories</a>
-          <i class="bx bxs-chevron-down js-arrow arrow"></i>
-          <ul class="js-sub-menu sub-menu">
-            <li><a href="#">Wood Arts</a></li>
-            <li><a href="#">Musical Instruments</a></li>
-            <li><a href="#">Funerary Articles</a></li>
-            <li><a href="#">Weaponry/Armaments</a></li>
-          </ul>
-        </li>
+        <li><a href="homepage.html" class="close-nav"><i class="fa fa-chevron-circle-left"></i></a></li>
+        <li><a href="homepage.html" class="active">Home</a></li>
         <li><a href="igorot-dances.html">Igorot Dances</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="access.html">Switch User</a></li>
+        <li><a href="index.html">Log out</a></li>
       </ul>
     </div>
     <div class="search-box">
