--- a/homepage.html
+++ b/homepage.html
@@ -1,221 +1,249 @@
 <!DOCTYPE html>
-<!-- Designined by CodingLab | www.youtube.com/codinglabyt -->
 <html lang="en" dir="ltr">
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Homepage</title>
-  <link rel="stylesheet" href="res/styles.css" />
-  <link rel="icon" href="img/favicon.png" type="image/x-icon" />
-  <link href="img/favicon.png" rel="icon" />
-  <link
-          rel="stylesheet"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-  />
-  <link
-          rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-  />
-  <script
-          src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js"
-          integrity="sha512-k/KAe4Yff9EUdYI5/IAHlwUswqeipP+Cp5qnrsUjTPCgl51La2/JhyyjNciztD7mWNKLSXci48m7cctATKfLlQ=="
-          crossorigin="anonymous"
-          referrerpolicy="no-referrer"
-  ></script>
-  <script src="res/jsQR.js"></script>
-  <script src="res/aframe.min.js"></script>
-  <script src="res/aframe-ar.js"></script>
-  <script src="res/aframe-text-geometry-component.min.js"></script>
-  <!-- Boxicons CDN Link -->
-  <link
-          href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
-          rel="stylesheet"
-  />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-</head>
-<body data-rsssl="1">
-<nav>
-  <div class="navbar">
-    <i class="bx bx-menu"></i>
-    <div class="logo">
-      <a href="index.html">
-        <img src="img/logo.png" style="height: auto" alt="Kultoura Logo" />
-      </a>
-    </div>
-    <div class="nav-links">
-      <div class="sidebar-logo">
-        <img
-                src="img/favicon.png"
-                style="justify-content: center"
-                alt="Kultoura Logo"
-                class="logo-name"
-        />
-        <i class="bx bx-x"></i>
-      </div>
-      <ul class="links">
-        <li><a href="homepage.html" class="close-nav"><i class="fa fa-chevron-circle-left"></i></a></li>
-        <li><a href="homepage.html" class="active">Home</a></li>
-        <li><a href="igorot-dances.html">Igorot Dances</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="index.html">Log out</a></li>
-      </ul>
-    </div>
-    <div class="search-box">
-      <i class="bx bx-search"></i>
-      <div class="input-box">
-        <input type="text" placeholder="Search..." />
-      </div>
-    </div>
-  </div>
-</nav>
-<main>
-  <video id="video" autoplay style="visibility: hidden"></video>
-    <canvas id="canvas" style="visibility: hidden"></canvas>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Homepage</title>
+    <link rel="stylesheet" href="res/styles.css" />
+    <link rel="icon" href="img/favicon.png" type="image/x-icon" />
+    <link href="img/favicon.png" rel="icon" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/html5-qrcode/2.3.4/html5-qrcode.min.js"
+      integrity="sha512-k/KAe4Yff9EUdYI5/IAHlwUswqeipP+Cp5qnrsUjTPCgl51La2/JhyyjNciztD7mWNKLSXci48m7cctATKfLlQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script src="res/jsQR.js"></script>
+    <script src="res/aframe.min.js"></script>
+    <script src="res/aframe-ar.js"></script>
+    <script src="res/aframe-text-geometry-component.min.js"></script>
+    <link
+      href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  </head>
+  <body data-rsssl="1">
+    <nav>
 
-    <!-- Font -->
-    <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">
+    <main>
+      <video id="video" autoplay style="visibility: hidden"></video>
+      <canvas id="canvas" style="visibility: hidden"></canvas>
+
+      <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">
         <a-assets>
-            <a-asset-item id="exoFont" src="fonts/exoBlack.typeface.json"></a-asset-item>
-            <img id="pixels" src="res/pixels.png" />
+          <a-asset-item
+            id="exoFont"
+            src="fonts/exoBlack.typeface.json"
+          ></a-asset-item>
         </a-assets>
-    </a-scene>
 
-    <!-- Scene - element where the information is displayed -->
-    <a-scene id="scene" vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">
-        <a-plane id="plane"></a-plane>
-        <a-text id="text"></a-text>
-    </a-scene>
-</main>
+        <!-- Text Box Background -->
+        <a-plane
+          id="textBox"
+          color="white"
+          opacity="0.8"
+          width="6"
+          height="4"
+          position="0 1.6 -10.1"
+          visible="false"
+        ></a-plane>
 
-<script>
-  // Initialize video and canvas elements
-  const video = document.getElementById('video');
-  const canvas = document.getElementById('canvas');
-  const canvasContext = canvas.getContext('2d');
-  // const plane = document.getElementById("plane");
-  const text = document.getElementById("text");
-  const image = document.getElementById("image");
-  let currentCodeData = null;
-  let artifactInfo = "";
+        <!-- Main Text -->
+        <a-text
+          id="text"
+          font="exoFont"
+          color="#073066"
+          position="0 1.6 -10"
+          text-align="left"
+          width="5"
+          wrap-count="30"
+          visible="false"
+        ></a-text>
+      </a-scene>
+    </main>
 
-  // Start scanning when the page loads
-  startScanning();
+    <!-- Floating Buttons -->
+    <button class="floating-button left" onclick="viewDetails()">i</button>
+    <button class="floating-button right" onclick="reloadPage()">🔄</button>
+    <button id="viewDetailsButton" class="floating-button" style="display: none;" onclick="viewDetails()">View More Details</button>
 
-  // Function to start the camera and scan QR codes
-  function startScanning() {
-      // Access the camera
-      navigator.mediaDevices.getUserMedia({
-              video: {
-                  facingMode: 'environment',
-              }
+    <script>
+      // Initialize video and canvas elements
+      const video = document.getElementById("video");
+      const canvas = document.getElementById("canvas");
+      const canvasContext = canvas.getContext("2d");
+      // const plane = document.getElementById("plane");
+      const text = document.getElementById("text");
+      const image = document.getElementById("image");
+      let currentCodeData = null;
+      let artifactInfo = "";
+
+      // Start scanning when the page loads
+      startScanning();
+
+      // Function to start the camera and scan QR codes
+      function startScanning() {
+        // Access the camera
+        navigator.mediaDevices
+          .getUserMedia({
+            video: {
+              facingMode: "environment",
+            },
           })
-          .then(stream => {
-              video.srcObject = stream;
-              video.setAttribute('playsinline', true); // For iOS compatibility
-              video.play();
-              requestAnimationFrame(scanQRCode);
+          .then((stream) => {
+            video.srcObject = stream;
+            video.setAttribute("playsinline", true); // For iOS compatibility
+            video.play();
+            requestAnimationFrame(scanQRCode);
           })
-          .catch(err => console.error('Camera access error:', err));
-  }
+          .catch((err) => console.error("Camera access error:", err));
+      }
 
-  // Function to scan QR codes
-  function scanQRCode() {
-      if (video.readyState === video.HAVE_ENOUGH_DATA) {
+      // Function to scan QR codes
+      function scanQRCode() {
+        if (video.readyState === video.HAVE_ENOUGH_DATA) {
           canvas.width = video.videoWidth;
           canvas.height = video.videoHeight;
           canvasContext.drawImage(video, 0, 0, canvas.width, canvas.height);
 
-          const imageData = canvasContext.getImageData(0, 0, canvas.width, canvas.height);
+          const imageData = canvasContext.getImageData(
+            0,
+            0,
+            canvas.width,
+            canvas.height
+          );
           const code = jsQR(imageData.data, canvas.width, canvas.height);
 
           onQRCodeDetected(code);
+        }
+        // Continue scanning
+        requestAnimationFrame(scanQRCode);
       }
-      // Continue scanning
-      requestAnimationFrame(scanQRCode);
-  }
 
-  // When QR code is detected
-  function onQRCodeDetected(code) {
-      if (code) {
-          const artifactId = code.data;
+      // When QR code is detected
+function onQRCodeDetected(code) {
+  if (code) {
+    const artifactId = code.data;
 
-          // Check if the detected QR code is different from the current one
-          if (artifactId !== currentCodeData) {
-              // Update the current QR code data
-              currentCodeData = artifactId;
+    // Check if the detected QR code is different from the current one
+    if (artifactId !== currentCodeData) {
+      // Update the current QR code data
+      currentCodeData = artifactId;
 
-              // @Paula you'll mostly work on this part kasi andito yung pag edit ng properties
-              // tapos yung <a-scene> na nasa <body>
-              // refer to https://aframe.io/docs/ dito mga pwedeng ilagay na elements and properties
+      // Set the text properties
+      const textBox = document.getElementById("textBox");
+      const text = document.getElementById("text");
 
-              // Set the text properties
-              text.setAttribute("font", "fonts/Exo2Bold.fnt");
-              text.setAttribute("color", "yellow");
-              text.setAttribute("rotation", "0 0 0");
-              text.setAttribute("position", "0 1.6 -10");
-              text.setAttribute("align", "center");
-              text.setAttribute("scale", "1 1 1");
+      // Set text box visibility and position
+      textBox.setAttribute("visible", "true");
+      textBox.setAttribute("position", "0 1.6 -10.1"); // Adjust as needed
 
-              // Set the text value
-              // TODO replace with query
-      // For debugging:
-              // switch (artifactId) {
-              //     case "1":
-              //         text.setAttribute("value",
-              //             "001 Lorem ipsum dolor sit amet, consectetur adipiscing elit.");
-              //         break;
-              //     case "2":
-              //         text.setAttribute("value",
-              //             "002 Suspendisse semper eros nibh, vitae lobortis leo vulputate nec");
-              //         break;
-              //     case "3":
-              //         text.setAttribute("value",
-              //             "003 Nunc a eleifend lacus. Ut vehicula nec enim non pulvinar");
-              //         break;
-              //     default:
-              //         text.setAttribute("value",
-              //             "Unknown QR code");
-              //         break;
-              // }
-              fetchArtifactInfo(artifactId)
-          }
-      } else {
-          // QR code not detected, reset or clear the display
-          currentCodeData = null;
-          text.setAttribute("value", ""); // Clear text 
+      // Set the text properties
+      text.setAttribute("font", "fonts/Exo2Bold.fnt");
+      text.setAttribute("color", "black");
+      text.setAttribute("rotation", "0 0 0");
+      text.setAttribute("position", "0 1.6 -10");
+      text.setAttribute("align", "center");
+      text.setAttribute("width", "5");
+      text.setAttribute("wrap-count", "30");
+      text.setAttribute("visible", "true");
+
+      // Set the text value
+      switch (artifactId) {
+        case "1":
+          text.setAttribute(
+            "value",
+            `Artifact Id: 1\nSection Name: Wood arts\nCatalogue Name: Traditional wood arts\nName: House door\nDescription: With surface carvings of animals and other designs\nCondition: With cracks\n`
+          );
+          break;
+        case "2":
+          text.setAttribute(
+            "value",
+            `Artifact Id: 2\nSection Name: Wood arts\nCatalogue Name: Contemporary wood arts\nName: Panel wall\nDescription: With surface carvings of animals and other designs\nCondition: With cracks\n`
+          );
+          break;
+        case "3":
+          text.setAttribute(
+            "value",
+            `Artifact Id: THREE\nSection Name: Musical instruments\nCatalogue Name: Gongs and drums\nName: Gong handle 1\nDescription: With back-to-back anthropomorphic motif\nCondition: No problem.\n`
+          );
+          break;
+        default:
+          text.setAttribute(
+            "value",
+            "Whoops! We couldn't fetch the artifact details. Please try again!"
+          );
+          text.setAttribute("color", "red");
+          break;
       }
+
+      // Show the view details button
+      document.getElementById("viewDetailsButton").style.display = "block";
+      
+      fetchArtifactInfo(artifactId);
+    }
+  } else {
+    // QR code not detected, reset or clear the display
+    currentCodeData = null;
+    const textBox = document.getElementById("textBox");
+    const text = document.getElementById("text");
+    text.setAttribute("value", "");
+    text.setAttribute("visible", "false");
+    textBox.setAttribute("visible", "false");
+
+    // Hide the view details button
+    document.getElementById("viewDetailsButton").style.display = "none";
   }
+}
 
-  // Query the artifact information from the database
-  function fetchArtifactInfo(artifactId) {
-      fetch(`getArtifact.php?artifact_id=${artifactId}`)
-          .then(response => response.json())
-          .then(data => {
-              if (data) {
-                  console.log("Data:");
-                  console.log(data);
-                  artifactInfo = `
-                      Artifact Id: ${data.artifact_id}
-                      Section Name: ${data.section_name}
-                      Catalogue Name: ${data.catalogue_name}
-                      Name: ${data.name}
-                      Description: ${data.description}
-                      Condition: ${data.condition}
-              `.trim();
-              } else {
-                  artifactInfo = 'Artifact not found';
-              }
-
-              text.setAttribute("value", artifactInfo);
-          })
-          .catch(error => {
-              console.error('Error fetching artifact info:', error);
-              artifactInfo = 'Error fetching artifact info';
-              text.setAttribute("value", artifactInfo);
-          });
+function viewDetails() {
+  if (currentCodeData) {
+    alert(`View more details for artifact ID: ${currentCodeData}`);
+    // Implement further logic to show detailed information
+  } else {
+    alert("No artifact detected.");
   }
-  </script>
+}
 
-<script src="res/scripts.js"></script>
-</body>
+      // Query the artifact information from the database
+      // function fetchArtifactInfo(artifactId) {
+      //   fetch(`getArtifact.php?artifact_id=${artifactId}`)
+      //     .then((response) => response.json())
+      //     .then((data) => {
+      //       if (data) {
+      //         console.log("Data:");
+      //         console.log(data);
+      //         artifactInfo = `
+      //                 Artifact Id: ${data.artifact_id}
+      //                 Section Name: ${data.section_name}
+      //                 Catalogue Name: ${data.catalogue_name}
+      //                 Name: ${data.name}
+      //                 Description: ${data.description}
+      //                 Condition: ${data.condition}
+      //         `.trim();
+      //       } else {
+      //         artifactInfo = "Artifact not found";
+      //       }
+
+      //       text.setAttribute("value", artifactInfo);
+      //     })
+      //     .catch((error) => {
+      //       console.error("Error fetching artifact info:", error);
+      //       artifactInfo = "Error fetching artifact info";
+      //       text.setAttribute("value", artifactInfo);
+      //     });
+      // }
+    </script>
+
+    <script src="res/scripts.js"></script>
+  </body>
 </html>
