VA tts and dir fix

--- a/scanner.html
+++ b/scanner.html
@@ -6,10 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SLU Museum App</title>
-    <script src="res/jsQR.js"></script>
-    <script src="res/aframe.min.js"></script>
-    <script src="res/aframe-ar.js"></script>
-    <script src="res/aframe-text-geometry-component.min.js"></script>
+    <script src="res/js/jsQR.js"></script>
+    <script src="res/js/aframe.min.js"></script>
+    <script src="res/js/aframe-ar.js"></script>
+    <script src="res/js/aframe-text-geometry-component.min.js"></script>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <a-scene vr-mode-ui="enabled: false" arjs="debugUIEnabled: false;">
         <a-assets>
             <a-asset-item id="exoFont" src="fonts/exoBlack.typeface.json"></a-asset-item>
-            <img id="pixels" src="res/pixels.png" />
+            <img id="pixels" src="assets/img/pixels.png" />
         </a-assets>
     </a-scene>
 
