--- a/VA.html
+++ b/VA.html
@@ -34,7 +34,8 @@
 <script src="https://cdn.jsdelivr.net/npm/pixi.js@6.5.2/dist/browser/pixi.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/pixi-live2d-display/dist/index.min.js"></script>
 
-<!-- Include custom JS file -->
-<script src="res/VA.js"></script>
+<!-- Include custom JS files -->
+<script src="res/js/speakClient.js"></script>
+<script src="res/js/VA.js"></script>
 </body>
 </html>
