--- a/access.html
+++ b/access.html
@@ -9,14 +9,14 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"
     />
-    <link rel="icon" href="img/favicon.png" type="image/x-icon" />
-    <link href="img/favicon.png" rel="icon" />
+    <link rel="icon" href="assets/img/favicon.png" type="image/x-icon" />
+    <link href="assets/img/favicon.png" rel="icon" />
     <!-- Your custom stylesheet -->
-    <link rel="stylesheet" href="res/styles.css" />
+    <link rel="stylesheet" href="res/css/styles.css" />
   </head>
   <body class="access-body">
     <div class="logo-container">
-      <img src="img/logo.png" alt="Logo" class="logo" />
+      <img src="assets/img/logo.png" alt="Logo" class="logo" />
     </div>
     <div class="back-button-container">
       <a href="index.html"
