--- a/admin-login.html
+++ b/admin-login.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login to Kultoura</title>
-    <link rel="stylesheet" href="res/styles.css" />
+    <link rel="stylesheet" href="res/css/styles.css" />
     <!-- Include Font Awesome -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"
       rel="stylesheet"
     />
-    <link rel="icon" href="img/favicon.png" type="image/x-icon" />
-    <link href="img/favicon.png" rel="icon" />
+    <link rel="icon" href="assets/img/favicon.png" type="image/x-icon" />
+    <link href="assets/img/favicon.png" rel="icon" />
   </head>
   <body class="login-body">
     <div class="container">
       <div class="logo-container">
-        <img src="img/logo.png" alt="Logo" class="logo" />
+        <img src="assets/img/logo.png" alt="Logo" class="logo" />
       </div>
       <!-- Back button container -->
       <div class="back-button-container">
@@ -59,6 +59,6 @@
         </form>
       </div>
     </div>
-    <script src="res/scripts.js"></script>
+    <script src="res/js/scripts.js"></script>
   </body>
 </html>
