--- a/guest-login.html
+++ b/guest-login.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Access as Guest</title>
-    <link rel="stylesheet" href="res/styles.css" />
+    <link rel="stylesheet" href="res/css/styles.css" />
     <!-- Include Font Awesome -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css"
       rel="stylesheet"
     />
-    <link rel="icon" href="img/favicon.png" type="image/x-icon" />
-    <link href="img/favicon.png" rel="icon" />
+    <link rel="icon" href="assets/img/favicon.png" type="image/x-icon" />
+    <link href="assets/img/favicon.png" rel="icon" />
   </head>
   <body class="access-body">
     <div class="container">
@@ -131,7 +131,7 @@
         </form>
       </div>
     </div>
-    <script src="res/scripts.js"></script>
+    <script src="res/js/scripts.js"></script>
     <script>
       function toggleForm(type) {
         var studentForm = document.getElementById("student-form");
