--- a/igorot-dances.html
+++ b/igorot-dances.html
@@ -3,9 +3,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Homepage</title>
-    <link rel="stylesheet" href="res/styles.css" />
-    <link rel="icon" href="img/favicon.png" type="image/x-icon" />
-    <link href="img/favicon.png" rel="icon" />
+    <link rel="stylesheet" href="res/css/styles.css" />
+    <link rel="icon" href="assets/img/favicon.png" type="image/x-icon" />
+    <link href="assets/img/favicon.png" rel="icon" />
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -33,13 +33,13 @@
         <i class="bx bx-menu"></i>
         <div class="logo">
           <a href="index.html">
-            <img src="img/logo.png" style="height: auto" alt="Kultoura Logo" />
+            <img src="assets/img/logo.png" style="height: auto" alt="Kultoura Logo" />
           </a>
         </div>
         <div class="nav-links">
           <div class="sidebar-logo">
             <img
-              src="img/favicon.png"
+              src="assets/img/favicon.png"
               style="justify-content: center"
               alt="Kultoura Logo"
               class="logo-name"
@@ -93,6 +93,6 @@
         </div>
       </div>
     </div>
-    <script src="res/scripts.js"></script>
+    <script src="res/js/scripts.js"></script>
   </body>
 </html>
